# syncyield

./: README  makefile  pyproject.toml  setup.cfg
samples/: sample.py  sample_stdin.py
src/async_io/: __init__.py  async_stdin.py  async_text_file.py  readable.py  writable.py
src/core/: __init__.py  fd_monitor.py  scheduler.py  task.py
src/core/scheduler/: __init__.py  scheduler.py
tests/: test_scheduler.py  test_tasks.py
