[tool.poetry]
name = "syncield"
version = "0.1.0"
description = "Package for async programming"
authors = ["Mariyan Momchilov <mmomchilov@asteasolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
mypy = "^0.991"
pydocstyle = "^6.1.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
